k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: neo4j
  labels:
    app.kubernetes.io/component: neo4j
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: neo4j
  ports:
    - name: http
      port: 7474
      targetPort: http
      protocol: TCP
    - name: bolt
      port: 7687
      targetPort: bolt
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app.kubernetes.io/component: postgres
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
      protocol: TCP
